XNAT-4769: Moved a bunch of JS functions around to fix scope issues since they were all wrapped up in the main user table rendering (which doesn't happen on the standalone page); fixed minor issues with widget styling and layout.

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -76,6 +76,7 @@ input[type="number"] {
 
 textarea {
     padding: 4px;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     border: 1px solid #c0c0c0;
